fixes header font size on small devices

--- a/themes/somrat/assets/css/custom.css
+++ b/themes/somrat/assets/css/custom.css
@@ -34,3 +34,9 @@
 .bar-before:before {
 	background: #fbcc04;
 }
+
+@media (max-width: 469px) and (min-height: 536px) {
+	.last-name {
+			font-size: 50px;
+	}
+}
